# inox-mix

./: .gitignore  BUILD.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  LICENSE  PHASE_2C_ROADMAP.md  PROJECT-INVENTORY.md  README.md  RELEASE-CHECKLIST.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
.claude/: PROMPTS.md
.claude/agents/: ARCHITEKT.md  BACKEND-ENGINEER.md  DEVOPS-ENGINEER.md  FRONTEND-ENGINEER.md  QUALITÄTSPRÜFER.md  SECURITY-ENGINEER.md
.claude/skills/: pipewire.md  rust-audio.md  tauri-frontend.md
.github/workflows/: release.yml
aur/: .SRCINFO  AUR-SUBMISSION.md  PKGBUILD  README.md  inox-mix.install  test-build.sh
docs/: ARCHITECTURE.md  DESIGN-SYSTEM.md  VOSK-SETUP.md  WHISPER-SETUP.md
flatpak/: QUICKSTART.md  README.md  build.sh  network.inox.mix.desktop  network.inox.mix.metainfo.xml  network.inox.mix.yml
scripts/: build-release.sh
specs/01-core/: AUDIT-BERICHT.md  PRUEF-CHECKLISTE.md  SPEC.md
specs/02-input-strips/: AUDIT-BERICHT.md  SPEC.md
specs/03-signal-chain/: AUDIT-BERICHT.md  QUALITY-REPORT-PHASE2.md  SPEC.md
specs/04-output-buses/: AUDIT-BERICHT.md  SPEC.md
specs/05-app-mixer/: SPEC.md
specs/06-routing-matrix/: AUDIT-BERICHT.md  SPEC.md
specs/07-streamer-mode/: SPEC.md
specs/08-voice-fx/: SPEC.md
specs/09-bleeper/: SPEC.md
specs/10-presets-scenes/: SPEC.md
specs/11-recording/: SPEC.md
specs/12-master/: AUDIT-BERICHT.md  SPEC.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs  routes.rs  websocket.rs
src-tauri/src/audio/: bus.rs  capture.rs  cpal_capture.rs  master.rs  metering.rs  metering_service.rs  mixer.rs  mod.rs  pipewire.rs  routing.rs
src-tauri/src/calibrate/: mod.rs
src-tauri/src/config/: database.rs  migration.rs  mod.rs  presets.rs
src-tauri/src/fx/: autogain.rs  compressor.rs  deesser.rs  denoise.rs  eq.rs  gate.rs  hpf.rs  limiter.rs  mod.rs
src-tauri/src/recording/: encoder.rs  mod.rs
src-tauri/src/streamer/: bleeper.rs  ducking.rs  ladspa_ffi.rs  ladspa_instance.rs  ladspa_loader.rs  mod.rs  soundboard.rs  voice_fx.rs  voice_fx_engine.rs
src-tauri/src/stt/: mod.rs  vosk.rs  whisper.rs
src-tauri/src/updater/: mod.rs
src/types/: api.ts  (+6 more)
(+70 files in other folders)
