[package]
name = "inox-mix"
version = "0.3.0"
description = "Professioneller Audio-Mixer für Linux Streamer"
authors = ["inoX-Network"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"

# Audio
pipewire = "0.8"
cpal = "0.15"      # Cross-Platform Audio Library
ringbuf = "0.4"
rodio = "0.19"
hound = "3.5"      # WAV Encoder/Decoder

# Async / Concurrency
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Datenbank
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
chrono = "0.4"  # Datum/Zeit
dirs = "5.0"    # Platform-spezifische Verzeichnisse
uuid = { version = "1.0", features = ["v4", "serde"] }  # UUID-Generierung
rand = "0.8"    # Random Number Generation für Audio-Simulation

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
